[tool.poetry]
name = "moodbeat-bot"
version = "0.1.0"
description = "Bot for moodbeat project"
authors = ["Moodbeat company"]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "3.3.2"
aiogram = "3.0.0b7"
SQLAlchemy = "2.0.15"
aiosqlite = "0.19.0"
python-dotenv = "1.0.0"
email-validator = "2.0.0.post2"
requests = "2.31.0"
pytz = "^2023.3"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "4.0.0"
autopep8 = "2.0.2"
flake8 = "6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
